opam-version: "2.0"
name: "chalk"
version: "1.1"
maintainer: "Nick Zuber <zuber.nicholas@gmail.com>"
author: "Nick Zuber <zuber.nicholas@gmail.com>"
homepage: "https://github.com/aexpl/chalk"
bug-reports: "https://github.com/aexpl/chalk/issues"
license: "MIT"
dev-repo: "git@github.com:aexpl/chalk.git"
build: [
  ["dune" "subst" "-n" name] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
depends: [
  "ocaml" {>= "4.03"}
  "dune" {build}
  "ocamlfind" {build}
]
